---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/sort_fields.arc

---
module @toplevel {
    func @crate_foo(%a_0: !arc.struct<x: si32, y: si32>) -> si32 {
        %x_0 = "arc.struct_access"(%a_0) { field = "x" } : (!arc.struct<x: si32, y: si32>) -> si32
        %x_1 = "arc.struct_access"(%a_0) { field = "y" } : (!arc.struct<x: si32, y: si32>) -> si32
        %x_2 = arc.addi %x_0, %x_1 : si32
        "arc.block.result"(%x_2) : (si32) -> ()
    }
    func @crate_bar(%a_1: !arc.struct<x: si32, y: si32>) -> si32 {
        %x_3 = "arc.struct_access"(%a_1) { field = "x" } : (!arc.struct<x: si32, y: si32>) -> si32
        %x_4 = "arc.struct_access"(%a_1) { field = "y" } : (!arc.struct<x: si32, y: si32>) -> si32
        %x_5 = arc.addi %x_3, %x_4 : si32
        "arc.block.result"(%x_5) : (si32) -> ()
    }
}

